fixes Manual nav link, purple contrast, OECI link style

--- a/src/frontend/src/styles/_globals.scss
+++ b/src/frontend/src/styles/_globals.scss
@@ -6,7 +6,7 @@ $blue: #2b74d2;
 $washed-blue: #e0e7f0;
 $dark-blue: #00449E;
 $purple: #9619ff;
-$washed-purple: #efe3fa;
+$washed-purple: #f4e8ff;
 $red: #a0004b;
 $washed-red: #f0e0e8;
 
